# export-postgres-csv

./: Cargo.toml
.zed/: settings.json
src/: all_tables.rs  export.rs  fetch_table.rs  lib.rs  main.rs  utils.rs
src/utils/: tables.rs  tests.rs
