[package]
name = "export-db-csv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive"] }
fern = "0.7.1"
indicatif = "0.18.4"
log = "0.4.29"
r2d2 = "0.8.10"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_postgres = "0.2.0"
thiserror = "2.0.18"
