[package]
name = "export-db-csv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
fern = "0.7.1"
indicatif = "0.18"
indicatif-log-bridge = "0.2"
log = "0.4"
r2d2 = "0.8"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_postgres = "0.2"
thiserror = "2.0"
