[package]
name = "export-db-csv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
fern = {version = "0.7", features = ["colored"]}
indicatif = {version = "0.18", features = ["rayon"]}
indicatif-log-bridge = "0.2"
log = "0.4"
postgres = { version = "0.19", features = ["with-time-0_3"]}
r2d2 = "0.8"
r2d2_postgres = "0.18.2"
rayon = "1.11"
thiserror = "2.0"
postgres-types = {version = "0.2", features = ["derive"]}
time = "0.3"
humantime = "2.3.0"

[dev-dependencies]
dotenvy = "0.15"
